--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
