--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.22.20",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.5",
     "add": "^2.0.6",
     "axios": "^1.5.0",
@@ -17,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "webpack": "^5.88.2"
   },
