--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "app",
   "private": "true",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "build:watch": "concurrently \"npm run watch-scripts\"",
+    "watch-scripts": "webpack --config webpack.config.js --watch",
+    "watch:css": "npx tailwindcss -i ./app/javascript/index.css -o ./app/javascript/index.css --watch",
+    "start": "concurrently \"rails tailwindcss:watch\" \"rails s\" \"npm run build:watch\""
   },
   "dependencies": {
     "@babel/preset-env": "^7.22.20",
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hotwired/stimulus": "^3.2.2",
@@ -21,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "webpack": "^5.88.2"
@@ -42,6 +48,8 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-cli": "^0.1.2",
     "webpack-cli": "^5.1.4"
   }
 }
