--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/preset-react": "^7.22.15",
+    "concurrently": "^8.2.1",
     "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -51,5 +52,14 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-cli": "^0.1.2",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "description": "<a name=\"readme-top\"></a>",
+  "version": "1.0.0",
+  "main": "babel.config.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "author": "",
+  "license": "ISC"
 }
