Edit scripts and Add documentation on installation and usage

--- a/config/database_sample.yml
+++ b/config/database_sample.yml
@@ -1,12 +1,12 @@
 #
-# Change the name of this file to database.yml and configure it with your own username and password below
+# Make a copy of this file, change its name to database.yml and configure it with your own username and password below
 #
 
 default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: YOUR_PASSWORD # Change to your local pg username <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<----------
+  username: YOUR_USERNAME # Change to your local pg username <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<----------
   password: YOUR_PASSWORD # Change to your local pg password <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<----------
 development:
   <<: *default
