--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,13 @@
 #
-# Make a copy of this file, change its name to database.yml and configure it with your own username and password below
+# Set your database connection here. The development and test environments
 #
 
 default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres # <<<< Change this to your postgres username
+  password: postgres # <<<< Change this to your postgres password
 development:
   <<: *default
   database: book-an-appointment_app_development
