--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: postgres # <<<< Change this to your postgres username
-  password: postgres # <<<< Change this to your postgres password
+  password: Christopher@abraham1 # <<<< Change this to your postgres password
 development:
   <<: *default
   database: book-an-appointment_app_development
